commit conda 环境搭建：1.build.cmd;2.run-client.sh即可

--- a/web-client/index.html
+++ b/web-client/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>AI人工智障写作</title>
+    <title>AI人工写作</title>
 </head>
 <style>
     * {
@@ -63,7 +63,7 @@
 
 <body>
     <div style="text-align: center; margin: 20px 0; line-height: 2;">
-        <p>AI人工智障写作 <a href="https://github.com/BlinkDL/AI-Writer" target="_blank">https://github.com/BlinkDL/AI-Writer</a> 请关注我的知乎 <a href="https://zhuanlan.zhihu.com/p/423646620" target="_blank">https://zhuanlan.zhihu.com/p/423646620</a></p>
+        <p>AI人工写作 <a href="https://github.com/BlinkDL/AI-Writer" target="_blank">https://github.com/BlinkDL/AI-Writer</a> 请关注我的知乎 <a href="https://zhuanlan.zhihu.com/p/423646620" target="_blank">https://zhuanlan.zhihu.com/p/423646620</a></p>
         <p style="color:darkred">请记得经常备份写作内容！模型的训练数据全部来自网文，缺乏生活常识。生成的文字仅供娱乐。请遵守法律法规。</p>
         <p></p>
     </div>
